--- a/ST_558_Project_2.Rmd
+++ b/ST_558_Project_2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Project 2"
 author: "Kristina Golden and Demetrios Samaras"
-date: "2023-06-30"
+date: "2023-07-02"
 output: html_document
 ---
 
@@ -11,7 +11,9 @@ setwd("~/GitHub/ST_558_Project_2")
 options(scipen = 1, digits = 6)
 ```
 
-```{r}
+## Required Packages
+
+```{r packages, message=FALSE, warning=FALSE}
 library(tidyverse)
 library(knitr)
 library(GGally)
@@ -21,44 +23,59 @@ library(vtable)
 library(psych)
 library(ggplot2)
 library(cowplot)
+library(reshape2)
 ```
 
-# Introduction Section  
+## Introduction
 
+## Read in the Data
 
-
-# Read in the Data
-```{r}
+```{r data, echo=FALSE, message=FALSE, warning=FALSE}
 setwd("~/GitHub/ST_558_Project_2")
 online <- read.csv('OnlineNewsPopularity.csv')
-
+colnames(online) <- c('url', 'days', 'n.Title', 'n.Content', 'Rate.Unique', 
+                      'Rate.Nonstop', 'Rate.Unique.Nonstop', 'n.Links', 
+                      'n.Other', 'n.Images', 'n.Videos',
+                      'Avg.Words', 'n.Key', 'Lifestyle', 'Entertainment',
+                      'Business', 'Social.Media', 'Tech', 'World', 'Min.Worst.Key',
+                      'Max.Worst.Key', 'Avg.Worst.Key', 'Min.Best.Key', 
+                      'Max.Best.Key', 'Avg.Best.Key', 'Avg.Min.Key', 'Avg.Max.Key',
+                      'Avg.Avg.Key', 'Min.Ref', 'Max.Ref', 'Avg.Ref', 'Mon', 
+                      'Tues', 'Wed', 'Thurs', 'Fri', 'Sat', 'Sun', 'Weekend',
+                      'LDA_00', 'LDA_01', 'LDA_02', 'LDA_03', 'LDA_04', 
+                      'Global.Subj', 'Global.Pol', 'Global.Pos.Rate',
+                      'Global.Neg.Rate', 'Rate.Pos', 'Rate.Neg', 'Avg.Pos.Pol',
+                      'Min.Pos.Pol', 'Max.Pos.Pol', 'Avg.Neg.Pol', 'Min.Neg.Pol',
+                      'Max.Neg.Pol', 'Title.Subj', 'Title.Pol', 'Abs.Subj',
+                      'Abs.Pol', 'shares')
 #Dropped url and timedelta because they are non-predictive. 
 online <- online[ , c(3:61)]
 
 #All trained data sets are in another .Rmd file called Create_dataframes_use_later. These can be copy and pasted when they are necessary
-```  
+```
 
-#Write Functions
-```{r}
+## Write Functions
+
+```{r summary_table}
 #Creates Summary Tables for a training dataset
-tables <- function(data_input) {
-  d <- describe(lifestyle_train[ , c('shares')], fast=TRUE)
+summary_table <- function(data_input) {
+  d <- describe(data_input[ , c('shares')], fast=TRUE)
   kable(d, caption = 'Shares Summary')
 }
 ```
 
-```{r}
+```{r correlation_table}
 #Create correlation table and graph for a training dataset
-correlation.table <- function(data_input) {
+correlation_table <- function(data_input) {
   #drop binary variables
   correlations <- cor(subset(data_input, select = c(2:4, 6:24, 33:50)))
   kable(correlations, caption = 'Correlations Lifestyle')
 }
 ```
 
-```{r}
+```{r correlation_graph}
 # Create correlation graph
-corr_simple <- function(data_input,sig=0.5){
+correlation_graph <- function(data_input,sig=0.5){
   corr <- cor(subset(data_input, select = c(2:4, 6:24, 33:50)))
   corr[lower.tri(corr, diag = TRUE)] <- NA
   corr <- melt(corr, na.rm = TRUE)
@@ -70,19 +87,18 @@ corr_simple <- function(data_input,sig=0.5){
 }
 ```
 
-```{r}
+```{r scatterplots_WIP}
 # Still working this one out
 # Create scatterplots
-scatterplots <- function(data_input) {
-  
-}
-scatterplots(lifestyle_train)
+# scatterplots <- function(data_input) {
+#   
+# }
+# scatterplots(lifestyle_train)
 ```
 
-# Lifestyle
+## Lifestyle EDA
 
-
-```{r}
+```{r Lifestyle}
 #Create data_channel_is_lifestyle dataset
 #Take out all data_Channel_is columns that are not relevant to this data set
 lifestyle <- online[ , -c(13:17)] 
@@ -90,12 +106,14 @@ lifestyle <- online[ , -c(13:17)]
 
 #Filter out the zeros from the remaining data_channel_is column
 lifestyle <- lifestyle %>%
-             filter(data_channel_is_lifestyle == 1)
+             filter(Lifestyle == 1)
 
 #Drop the data_channel_is column
 lifestyle <- lifestyle[ , -c(12)] 
 lifestyle <- lifestyle[ , c(53, 1:52)]
+```
 
+```{r lifestyle_train_test}
 #Split the data into training and test
 set.seed(5432)
 
@@ -108,21 +126,23 @@ test <- setdiff(1:nrow(lifestyle), train)
 # trainiing and testing subsets
 lifestyle_train <- lifestyle[train, ]
 lifestyle_test <- lifestyle[test, ]
+```
 
-```  
-
-```{r}
+```{r lifestyle_summary}
 #Shares table for lifestyle_train
-tables(lifestyle_train)
+summary_table(lifestyle_train)
 ```
 
-```{r}
+```{r lifestyle_corr_table}
 #Correlation table for lifestyle_train
-correlation.table(lifestyle_train)
+correlation_table(lifestyle_train)
+```
+
+```{r lifestyle_corr_graph}
+#Correlation graph for lifestyle_train
+correlation_graph(lifestyle_train)
 ```
 
 ```{r}
-#Correlation graph for lifestyle_train
-corr_simple(lifestyle_train)
-```
 
+```
