--- a/_Rmd/ST_558_Project_2.Rmd
+++ b/_Rmd/ST_558_Project_2.Rmd
@@ -11,19 +11,19 @@ params:
 ```{r render with params, echo=FALSE, eval=FALSE, include=FALSE}
 ## delete ## working on the automation, let me know if you think there is a better way. i think for this we just have to go through at put params$ ## 
 
-## renders with parameters "lifestyle 
-rmarkdown::render("/GitHub/ST_558_Project_2", output_file = "Lifestyle.html",
-params = list(data_channel_is = "lifestyle"))
+## renders single github doc with parameters lifestyle 
+rmarkdown::render("/GitHub/ST_558_Project_2", output_file = "Lifestyle.md",
+params = list(data_channel_is = "Lifestyle"))
 
 ## renders all 6 documents 
 
-## creates a list of all 6 desired params from create_dataframes_use_later
-X <- c("lifestyle", "entertainment", "business", "socmed", "tech", "world")
+## creates a list of all 6 desired params from online
+X <- c("Lifestyle", "Entertainment", "Business", "Social.Media", "Tech", "World")
 
 ## renders with params to all 
-sapply(X, FUN = function(X){
+apply(X, FUN = function(X){
   
-out <- paste0(X, ".html")
+out <- paste0(X, ".md")
   
 rmarkdown::render("/GitHub/ST_558_Project_2", output_file = out,
 params = list(data_channel_is = X ))
@@ -227,6 +227,19 @@ correlation_table(lifestyle_train)
 correlation_graph(lifestyle_train)
 ```
 
+
+```{r correlations between shares and other variables }
+## delete## exploratory to try to figure out which variables to include in models cause weird results. might need to prescreen and pick less variables for modeling  ## 
+
+cor(entertainment_train)[1,] %>% sort()
+
+
+cor(lifestyle_train)[1,] %>% sort()
+
+
+```
+
+
 # Entertainment
 
 ## Entertainment EDA
@@ -266,17 +279,17 @@ entertainment_test <- entertainment[test, ]
 
 ```{r Linear regression 1 }
 ## linear regression model using all predictors 
-linear_model_1 <- train( shares ~ ., data = lifestyle_train,
+linear_model_1 <- train( shares ~ ., data = entertainment_train,
                          method = "lm",
                          preProcess = c("center", "scale"),
                          trControl = trainControl(method = "cv", 
                                                   number = 5))
 
 ## prediction of test with model 
-linear_model_1_pred <- predict(linear_model_1, newdata = dplyr::select(lifestyle_test, -shares))
+linear_model_1_pred <- predict(linear_model_1, newdata = dplyr::select(entertainment_test, -shares))
 
 ## storing error of model on test set 
-linear_1_RMSE<- postResample(boosted_tree_model_pred, obs = lifestyle_test$shares)
+linear_1_RMSE<- postResample(linear_model_1_pred, obs = entertainment_test$shares)
 
 ```
 
@@ -304,10 +317,10 @@ random_forest(lifestyle_train)
 ## DELETE after ## I'm really confused as to why higher values are not giving better rsme for tuning I'm going to go to office hours 7/3 to try to figure out. will use random parameters for now  ## 
 
 ## creates grid of possible tuning parameters 
-gbm_grid <-  expand.grid(interaction.depth = c(1:7), 
-  n.trees = (1:10)*50, 
+gbm_grid <-  expand.grid(interaction.depth = c(1,4,7), 
+  n.trees = c(1:20)*10 , 
   shrinkage = 0.1,
-  n.minobsinnode = 20)
+  n.minobsinnode = c(20, 40))
 
 ## sets trainControl method 
 fit_control <- trainControl(method = "repeatedcv",
@@ -317,7 +330,7 @@ fit_control <- trainControl(method = "repeatedcv",
 set.seed(13)
 
 ## trains to find optimal tuning parameters except it is giving weird parameters 
-gbm_tree_cv <- train(shares ~ ., data = lifestyle_train,
+gbm_tree_cv <- train(shares ~ ., data = entertainment_train,
                      method = "gbm",
                      preProcess = c("center", "scale"),
                      trControl = fit_control,
@@ -330,17 +343,17 @@ plot(gbm_tree_cv)
 
 ```{r boosted tree tuned}
 ## creates boosted tree model with tuning parameters n.trees, shrinkage, interaction.depth from CV 
-boosted_tree_model <- gbm(shares ~ ., data = lifestyle_train, 
+boosted_tree_model <- gbm(shares ~ ., data = entertainment_train, 
                           distribution = "gaussian", 
-                          n.trees = 500 ,
+                          n.trees = 16 ,
                           shrinkage = 0.1 , 
-                          interaction.depth = 6 )
+                          interaction.depth = 7 )
 
 ## test set prediction
-boosted_tree_model_pred <- predict(boosted_tree_model, newdata = dplyr::select(lifestyle_test, -shares), n.trees = 500)
+boosted_tree_model_pred <- predict(boosted_tree_model, newdata = dplyr::select(entertainment_test, -shares), n.trees = 7)
 
 ## stores results 
-boosted_tree_RMSE <- postResample(boosted_tree_model_pred, obs = lifestyle_test$shares)
+boosted_tree_RMSE <- postResample(boosted_tree_model_pred, obs = entertainment_test$shares)
 
 ```
 
