Fixed random forest to include cross validation. Included a question about automation

--- a/_Rmd/ST_558_Project_2.Rmd
+++ b/_Rmd/ST_558_Project_2.Rmd
@@ -22,14 +22,17 @@ reports <- tibble(output_file, params)
 ## renders with params to all 
 apply(reports, MARGIN=1, FUN = function(x){
   
-rmarkdown::render("./_Rmd/Automation_test.Rmd", output_dir = "./automations_test_html", output_file = x[[1]], params = x[[2]]
+rmarkdown::render('C:/Documents/Github/ST_558_Project_2/_Rmd/Automation_test.Rmd', output_dir = "./automations_test_html", output_file = x[[1]], params = x[[2]]
     )
   }
 )
+
+##Delete## Ok, besides written commentary, I think everything else is good to go (unless we decide we want to add some scatterplots, but there are so many possible prediction variables, that scatterplots seem overwhelming). What do I need to do to assist with the automation portion? I am happy to assist, though I do find this portion extremely confusing. I really appreciate you taking that part of the project on! Let me know if there is anything you would like me to modify on my portions of the regression/EDA
 ```
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, eval = TRUE)
+knitr::opts_chunk$set(echo = TRUE, eval = TRUE, 
+                      cache = TRUE)
 setwd("C:/Documents/Github/ST_558_Project_2")
 options(scipen = 1, digits = 6)
 ```
@@ -250,35 +253,23 @@ linear_2_RMSE<- postResample(linear_model_2_pred, obs = lifestyle_test$shares)
 
 ## Random forest model
 
-```{r random_forest}
-#Cross validation not needed on random forest
+```{r random_forest, cache=TRUE}
 set.seed(10210526)
-#Removed rate.nonstop because they were all 1. Removed Mon-Sat and Weekend because they were binary/categorical
-lifestyle_train2 <- lifestyle_train %>%
-                      select(-c('Rate.Nonstop',
-                                'Mon', 'Tues',
-                                'Wed', 'Thurs',
-                                'Fri', 'Sat',
-                                'Sun', 
-                                'Weekend'))
-rfFit <- randomForest(shares ~ ., data = lifestyle_train2, 
-                      mtry = ncol(lifestyle_train2)/3,
-                      ntree = 200, importance = TRUE)
-rfFit
-e <- as.data.frame(rfFit$importance)
-e
-e <- e %>%
-      select(c('%IncMSE'))
-max(e)
-
-varImpPlot(rfFit,scale=TRUE, var = 20)
-rfPred <- predict(rfFit, newdata =
-                    dplyr::select(lifestyle_test, -shares))
-rfRMSE <- sqrt(mean((rfPred-lifestyle_test$shares)^2))
-rfRMSE
-#Please look over this. What do you think? There are far too many variables, but I am not sure which ones to get rid of that I haven't already.
+rfFit <- train(shares ~ ., 
+        data = lifestyle_train,
+        method = "rf",
+        trControl = trainControl(method = "cv",
+                                        number = 5),
+        preProcess = c("center", "scale"),
+        tuneGrid = 
+          data.frame(mtry = ncol(lifestyle_train)/3))
+rfFit_pred <- predict(rfFit, newdata = lifestyle_test)
+rfRMSE<- postResample(rfFit_pred, obs =
+                            lifestyle_test$shares)
 
 ## Delete## i think it looks good! i will need to rewatch the lecture and try to dig in some more cause im really lost on these ensamble tree based models. i think you chose some good ones to remove.  the only thing is in the project it says "Both models should be chosen using cross-validation" for random forest and boosted tree, so i think the random forest does need cv unless im missing something. Im still trying to figure out what is wrong with my cross validation and a way to take the tuning parameters based on each data_channel_is during the automation process. I think we are close though! 
+
+## Delete## I rewatched the lecture for model fitting using the caret package. I made the appropriate modifications. I tried to use the tuneGrid but the code was trying to run for over 5 minutes and it never went through, so I used the suggested mtry for regression from the random forest lecture.
 
 ```
 
@@ -337,7 +328,8 @@ boosted_tree_RMSE <- postResample(boosted_tree_model_pred, obs = lifestyle_test$
 models_RMSE <- data.frame(linear_1_RMSE=linear_1_RMSE[1],
                          linear_2_RMSE=linear_2_RMSE[1], 
                          rfRMSE=rfRMSE[1],
-                          boosted_tree_RMSE = boosted_tree_RMSE[1] )
+                          boosted_tree_RMSE =
+                           boosted_tree_RMSE[1] )
 
 ## gets the name of the column with the smallest rmse 
 smallest_RMSE<-colnames(models_RMSE)[apply(models_RMSE,1,which.min)]
